Fixed spacing so that last footer doesn't come into images

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -135,7 +135,7 @@ body {
 //content    
     .content {
       width: 980px;
-      height: 100%;
+      min-height: 2300px;
       margin: auto;
       padding-top: 25px;
       background-color: #EFEFEB;
